# jm-checkconnect

./: .fossa.yml  .gitignore  .hound.yml  .jscpd.json  .markdownlint.json  .markdownlint.yml  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  README.md  SECURITY.md  biome.json  config.ini  config.toml  cspell.config.yaml  goodcheck.yml  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  ruff_defaults.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  codecov.yml  labeler.yml  project-config.yml  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml
.github/actions/generate-changelog/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/setup/: action.yml  hatch_full.yml
.github/actions/setup-qt-dependencies/: action.yml
.github/config/: workflow-settings.yml
.github/workflows/: add-comment-to-issue.yml  add-label-to-issue.yml  changelog-update.yml  changelog.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  commitlint.yml  constraints.txt  dependabot-merge.yml  dependency-review.yml  devskim-analysis.yml  docs-deploy.yml  issue-managment.yml  labeler.yml  labels-sync.yml  lock.yml  maintenance.yml  mega-linter.yml  mkdocs-pages.yml  ossar-analysis.yml  pr-checks.yml  pr-lint.yaml  release-drafter.yml  reuse-check.yml  scorecard.yml  semgrep.yml  stale.yml  test.yml  trunk.yml  write-good.yml
.reuse/: dep5
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
config/cspell/: project-words.txt
config/spellcheck/: project-words.txt
docs/: index.de.md  index.md  installation.md  troubleshooting.md  usage.md
docs/.overrides/partials/: copyright.html
docs/about/: EUPL-1.2.md  authors.md
docs/community/: code_of_conduct.md  contributing.md
docs/config/: doc_quality.yml
docs/developer/: api-docs.md  api.md  build.md  changelog.md  core.md  development.md  security.md
docs/guides/: commandline.md  install.md
docs/scripts/: doc_quality.py
scripts/: doc_quality.py  doc_quality.yml  translation_config.yml  translation_status.py  update_translations.py
src/checkconnect/: __about__.py  __init__.py  __main__.py  config.toml  exceptions.py
src/checkconnect/cli/: __init__.py  application.py  checkconnect.py  gui_app.py  main.py  options.py  py.typed  report_app.py  run_app.py  summary_app.py
src/checkconnect/cli/locales/de/LC_MESSAGES/: messages.po
src/checkconnect/cli/locales/es/LC_MESSAGES/: messages.po
src/checkconnect/cli/locales/fr/LC_MESSAGES/: messages.po
src/checkconnect/cli/locales/it/LC_MESSAGES/: messages.po
src/checkconnect/config/: appcontext.py  config.toml  logger.py  logging_bootstrap.py  logging_manager.py  settings.py  settings_manager.py  translation_manager.py
src/checkconnect/core/: __init__.py  check_urls.py  checkconnect.py  create_reports.py  ntp_checker.py  url_checker.py
src/checkconnect/core/locales/de/LC_MESSAGES/: messages.po
src/checkconnect/core/locales/es/LC_MESSAGES/: messages.po
src/checkconnect/core/locales/fr/LC_MESSAGES/: messages.po
src/checkconnect/gui/: checkconnect_gui.py  gui_main.py  main.py  resources.qrc  startup.py  test
src/checkconnect/gui/locales/: checkconnect_de.ts  checkconnect_de_DE.ts  checkconnect_es.ts  checkconnect_fr.ts  checkconnect_it.ts
src/checkconnect/gui/translations/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  it.ts  ja.ts  ko.ts  nl.ts  pl.ts  pt.ts  pt_BR.ts  ru.ts  sv.ts  tr.ts  vi.ts  zh_CN.ts  zh_TW.ts
src/checkconnect/locales/ar/LC_MESSAGES/ar/LC_MESSAGES/: messages.po
src/checkconnect/locales/de/LC_MESSAGES/de/LC_MESSAGES/: messages.po
src/checkconnect/locales/en/LC_MESSAGES/en/LC_MESSAGES/: messages.po
src/checkconnect/locales/es/LC_MESSAGES/es/LC_MESSAGES/: messages.po
src/checkconnect/locales/fr/LC_MESSAGES/fr/LC_MESSAGES/: messages.po
src/checkconnect/locales/hi/LC_MESSAGES/hi/LC_MESSAGES/: messages.po
src/checkconnect/locales/it/LC_MESSAGES/it/LC_MESSAGES/: messages.po
src/checkconnect/locales/ja/LC_MESSAGES/ja/LC_MESSAGES/: messages.po
src/checkconnect/locales/ko/LC_MESSAGES/ko/LC_MESSAGES/: messages.po
src/checkconnect/locales/nl/LC_MESSAGES/nl/LC_MESSAGES/: messages.po
src/checkconnect/locales/pl/LC_MESSAGES/pl/LC_MESSAGES/: messages.po
src/checkconnect/locales/pt/LC_MESSAGES/pt/LC_MESSAGES/: messages.po
src/checkconnect/locales/pt_BR/LC_MESSAGES/pt_BR/LC_MESSAGES/: messages.po
src/checkconnect/locales/ru/LC_MESSAGES/ru/LC_MESSAGES/: messages.po
src/checkconnect/locales/sv/LC_MESSAGES/sv/LC_MESSAGES/: messages.po
src/checkconnect/locales/tr/LC_MESSAGES/tr/LC_MESSAGES/: messages.po
src/checkconnect/locales/vi/LC_MESSAGES/vi/LC_MESSAGES/: messages.po
src/checkconnect/locales/zh_CN/LC_MESSAGES/zh_CN/LC_MESSAGES/: messages.po
src/checkconnect/reports/: report_generator.py  report_manager.py
src/checkconnect/scripts/: update_translations.py
tests/: conftest.py  main_test.py  utils.py
tests/config/: settings_test.py
tests/e2e/: test_checkconnect_e2e.py  test_cli_handles_invalid_config_file.py
tests/integration/: test_cli_full_flow.py  test_integration.py
tests/integration/cli/: test_gui_app.py  test_main.py  test_report_app.py  test_run_app.py  test_summary_app.py
tests/unit/: test_checkconnect.py  test_checkconnect_cli.py  test_checkconnect_gui.py  test_cli_main.py  test_create_reports.py  test_gui.py  test_gui_main.py  test_ntp_checker.py  test_settings.py  test_url_checker.py
tests/unit/cli/: test_checkconnect_cli.py
tests/unit/config/: test_appcontext.py  test_logger.py  test_logging_manager.py  test_settings_manager.py  test_translation_manager.py
tests/unit/core/: test_checkconnect.py  test_create_reports.py  test_ntp_checker.py  test_url_checker.py
tests/unit/gui/: test_checkconnect_gui.py  test_gui_main.py  test_startup.py
tests/unit/reports/: test_report_generator.py  test_report_manager.py
tests/utils/: common.py
(+1 files in other folders)
